--- a/AcroCities/AcroCities-Info.plist
+++ b/AcroCities/AcroCities-Info.plist
@@ -26,7 +26,9 @@
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
+		<string>location-services</string>
 		<string>armv7</string>
+		<string>gps</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
